Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.

pkgcore 0.3.3:

* IUSE defaults are respected now, so EAPI=1 implemented

* Write slotted atoms to worldfile as portage supports this now

* Sync up with portage; add support for lzma to unpack- mirror r7991 from
  portage.

pkgcore 0.3.2:

* ticket 190746 from gentoo; basically need to force the perms of first level
  directory of an unpacked $DISTDIR to ensure it's at least readable/writable.
  fixes unpacking of app-misc/screen-4.0.3_p20070403::gentoo-x86 .

* ticket 118; if -u, don't add the node to world set.

* correct a corner case in python implementation of cpv comparison (just
  python, cpy extension handles it correctly); bug 188449 in gentoo, basically
  floats have a limited precision, thus it was possible to get truncation in
  comparison with specially crafted versions.

* handle EOF/IOError on raw_input (for --ask) a bit more gracefully, ticket
  108.

* cd to ${WORKDIR} if ${S} doesn't exist for test/install phases; matches
  change in portage behaviour.

* Now require snakeoil version 0.2 and up- require new capability of 
  AtomicWriteFile, ability to specify uid/gid/perms.  Via that, fixes ticket
  109 (umask leaking through to profile.env).

* the 'glsa' pkgset is now deprecated in favor of 'vuln'; will remain
  through till 0.4 (ticket #106).
 
* ticket 105/96; fix via andkit, basically a bug in einstall lead to
  extra einstall opts getting dropped instead of passed through.

* compatibility fix for lha unpacking for nwere versions of lha.

* emake now invokes ${MAKE:-make}, instead of make- undocumented ebuild
  req, see bug 186598 at bugs.gentoo.org.

* pmerge --verbose is now pmerge -F portage-verbose-formatter

* Stop installing pregen symlink; functionality moved to pmaint regen.

* 'pmerge --domain' was added; basically is a way to specify the domain to
  use, else usees the configuration defined default domain.
