@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE UserProject SYSTEM "UserProject-4.0.dtd">
 <!-- eric4 user project file for project pkgcore -->
+<!-- Saved: 2007-12-26, 00:33:31 -->
 <!-- Copyright (C) 2007 ,  -->
 <UserProject version="4.0">
 </UserProject>
