@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE Tasks SYSTEM "Tasks-3.8.dtd">
 <!-- eric4 tasks file for project pkgcore -->
+<!-- Saved: 2007-12-26, 00:33:31 -->
 <Tasks version="3.8">
 </Tasks>
