@@ -271,16 +271,6 @@ class domain(pkgcore.config.domain.domain):
                 bashrc.append(source)
 
         # stack use stuff first, then profile.
-        def disabled_pkg_use_wrap(restrict_pairs):
-            """note: this is a hack to handle disabled iuses"""
-            for atom, uses in restrict_pairs:
-                disabled = []
-                for use in uses:
-                    if use.startswith("-"):
-                        disabled.append(use[1:])
-                if disabled:
-                    yield (atom, tuple(disabled))
-        
         self.enabled_use = collapsed_restrict_to_data(
             ((packages.AlwaysTrue, self.use),
             (packages.AlwaysTrue, [self.arch])),
@@ -290,8 +280,7 @@ class domain(pkgcore.config.domain.domain):
             profile.forced_use.iteritems(),
             ((packages.AlwaysTrue, [self.arch]),))
         self.disabled_use = collapsed_restrict_to_data(
-            profile.masked_use.iteritems(), 
-            disabled_pkg_use_wrap(pkg_use))
+            profile.masked_use.iteritems())
 
         self.settings["bashrc"] = bashrc
         self.repos = []
@@ -425,9 +414,29 @@ class domain(pkgcore.config.domain.domain):
         return collapsed_restrict_to_data(default_use, pkg_use)
 
     def get_package_use(self, pkg):
-        disabled = self.disabled_use.pull_data(pkg)
         enabled = self.enabled_use.pull_data(pkg)
+        disabled = self.disabled_use.pull_data(pkg)
         immutable = self.forced_use.pull_data(pkg, False)
+
+        # sg=suggested by pkg, lf = local force from package.use
+        pkg_enabled = set(use[1:] for use in pkg.iuse if use[:1] == "+")
+        pkg_disabled = set(use[1:] for use in pkg.iuse if use[:1] == "-")
+        pkg_lf_enabled, pkg_lf_disabled = self.enabled_use.pull_cp_data(pkg)
+
+        if pkg_enabled:
+            pkg_enabled.difference_update(pkg_lf_disabled)
+            if enabled is self.enabled_use.defaults:
+                enabled = pkg_enabled.union(enabled)
+            else:
+                enabled.update(pkg_enabled)
+
+        if pkg_disabled:
+            pkg_disabled.difference_update(pkg_lf_enabled)
+            if pkg_disabled:
+                if enabled is self.enabled_use.defaults:
+                    enabled = set(enabled)
+                enabled.difference_update(pkg_disabled)
+
         if disabled:
             if enabled is self.enabled_use.defaults:
                 enabled = set(enabled)
